--- a/index.html
+++ b/index.html
@@ -54,6 +54,35 @@
                 </div>
             </div>
         </section>
+        <section class="future-section">
+            <h2 class="future-section-title">The Vision of Future</h2>
+            <p class="future-section-discription">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <div class="future-section-container">
+                <div class="future-mini-div-1">
+                    <img class="card-icon-img" src="assets/card-icon.png" alt="">
+                    <h5 class="mini-div-title">Digital Transformation</h5>
+                    <p class="mini-div-discription">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button class="future-mni-btn-1 mini-btn">Learn More</button>
+                </div>
+                <div class="future-mini-div-2">
+                    <img class="card-icon-img" src="assets/card-icon.png" alt="">
+                    <h5 class="mini-div-title">Green Energy</h5>
+                    <p class="mini-div-discription">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <button class="future-mni-btn-2 mini-btn">Learn More</button>
+                </div>
+                <div class="future-mini-div-3">
+                    <img class="card-icon-img" src="assets/card-icon.png" alt="">
+                    <h5 class="mini-div-title">Modern Infrastructure</h5>
+                    <p class="mini-div-discription">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <button class="future-mni-btn-3 mini-btn">Learn More</button>
+                </div>
+            </div>
+        </section>
+        <section class="question-section">
+            <p class="question-section-discription">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
+            <h6 class="question-title">Dr. Muhammad Yunus</h6>
+            <p class="question-section-discription">Chief Adviser of the People's Republic of Bangladesh</p>
+        </section>
     </main>
     <footer>
 
