--- a/index.html
+++ b/index.html
@@ -83,6 +83,42 @@
             <h6 class="question-title">Dr. Muhammad Yunus</h6>
             <p class="question-section-discription">Chief Adviser of the People's Republic of Bangladesh</p>
         </section>
+        <section class="news-section">
+            <h2 class="section-title">Recent News</h2>
+            <p class="section-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <div class="news-section-container">
+                <img class="satelite" src="assets/satelite.png" alt="satelite">
+                <div class="new-section-contant">
+                    <h4 class="contant-title">Bangladesh Launches New Satellite</h4>
+                    <img src="assets/al-jazeera.png" alt="al-jazeera">
+                    <p class="news-section-discription">Date: 05/01/2025 Time: 10.25 PM</p>
+                    <p class="news-section-discription">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="btn">Read More</button>
+                </div>
+            </div>
+            <br>
+            <div class="news-section-container">
+                <div class="new-section-contant">
+                    <h4 class="contant-title">Bangladesh Launches New Satellite</h4>
+                    <img src="assets/al-jazeera.png" alt="al-jazeera">
+                    <p class="news-section-discription">Date: 05/01/2025 Time: 10.25 PM</p>
+                    <p class="news-section-discription">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="btn">Read More</button>
+                </div>
+                <img class="satelite" src="assets/satelite.png" alt="satelite">
+            </div>
+            <br>
+            <div class="news-section-container">
+                <img class="satelite" src="assets/satelite.png" alt="satelite">
+                <div class="new-section-contant">
+                    <h4 class="contant-title">Bangladesh Launches New Satellite</h4>
+                    <img src="assets/al-jazeera.png" alt="al-jazeera">
+                    <p class="news-section-discription">Date: 05/01/2025 Time: 10.25 PM</p>
+                    <p class="news-section-discription">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="btn">Read More</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
