added all files commit

--- a/index.html
+++ b/index.html
@@ -119,6 +119,24 @@
                 </div>
             </div>
         </section>
+        <section class="donate-section">
+            <h3 class="donate-section-title">Donate Today</h3>
+            <p class="donate-section-discription">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+            <div class="donate-section-container">
+                <button class="taka-btn">100 Taka</button>
+                <button class="taka-btn-2"> 200 Taka</button>
+                <button class="taka-btn">500 Taka</button>
+                <button class="taka-btn">1000 Taka</button>
+            </div>
+            <div class="center-2">
+            <input class="input-button" type="text" name="" placeholder="Other Amount (Taka)" id="">
+                <button class="btn">Done Now</button>
+            </div>
+        </section>
+        <section class="subscrib-section">
+            <h3>Subscribe Newsletter</h3>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+        </section>
     </main>
     <footer>
 
