added the last commit

--- a/index.html
+++ b/index.html
@@ -134,8 +134,13 @@
             </div>
         </section>
         <section class="subscrib-section">
-            <h3>Subscribe Newsletter</h3>
-            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+            <h3 class="donate-section-title">Subscribe Newsletter</h3>
+            <p class="donate-section-discription">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+            <div class="input-submit">
+                <input class="input-email" type="email" name="" placeholder="Enter your email here" id="">
+                <button class="subscribe" type="submit">Subscribe</button>
+            </div>
+            <p class="donate-section-discription">We promise not to spam you!</p>
         </section>
     </main>
     <footer>
