added the final commit

--- a/index.html
+++ b/index.html
@@ -144,7 +144,12 @@
         </section>
     </main>
     <footer>
-
+        <section class="footer-section">
+            <h4 class="footer-title">Bangladesh 2.0</h4>
+            <div class="img-container">
+                <img src="assets/facebook.png" alt="facebook"><img src="assets/instagram.png" alt="instagram"><img src="assets/x.png" alt="x">
+            </div>
+        </section>
     </footer>
     </div>
 </body>
